hanko/k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: hanko
  labels:
    name: hanko
    pod-security.kubernetes.io/enforce: restricted
